# raxios

./: .gitignore  .npmignore  AGENTS.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  raxios.browser.js  raxios.core.js  raxios.js  vitest.config.js
.github/workflows/: ci.yml
benchmarks/: http.bench.mjs
src/: error.rs  lib.rs
tests/browser/: browser.test.mjs
tests/integration/: basic.test.mjs  binary-error.test.mjs  binary.test.mjs  features.test.mjs  interceptors.test.mjs
